# RAGIR

./: README.md
RAGIR.egg-info/: requires.txt  top_level.txt
RAGIR/database/: setup_database.py
RAGIR/evaluation/: evaluate_dataset.ipynb  retriever_eval_dataset.json
RAGIR/main/: prompt.py
RAGIR/utils/: util_functions.py
docker/: docker-compose.yml
thesis-torky/: pyproject.toml  setup.py
thesis-torky/RAGIR.egg-info/: PKG-INFO  SOURCES.txt
thesis-torky/RAGIR/evaluation/: evaluate_dataset.py
thesis-torky/RAGIR/generate/: generate_dataset.py
thesis-torky/RAGIR/main/: model.py
